# SafeVision

./: .env.example  .gitignore  README.md  analytics.db  app.py  auth.py  config.py  forms.py  pyproject.toml  requirements.txt  start.py
controllers/: surveillance_controller.py
docs/: setup.md
models/: behavior_classification_model.py  integrated_surveillance_system.py  people_detection_model.py  pose_estimation_model.py  pose_former_model.py  yolo_output.csv
routes/: __init__.py  analytics.py  auth_routes.py  pages_routes.py  performance_routes.py  recording_routes.py  surveillance_routes.py  user_routes.py
services/: auth_service.py  frame_service.py  performance_monitor.py  video_recorder.py
static/css/: 403.css  404.css  500.css  about.css  analytics.css  common.css  home.css  login.css  recordings.css  settings.css
static/js/: about.js  analytics.js  common.js  home.js  login.js  recordings.js  settings.js
static/js/components/: confidence-meter.js  video-feed.js
templates/: 403.html  404.html  500.html  about.html  add_subject.html  analytics.html  home.html  layout.html  login.html  recordings.html  settings.html  signup.html
templates/auth/: login.html
templates/components/: confidence-meter.html  navbar.html  video-feed.html
views/: public_view.py
